knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/Clinician_Offboarding_Request__e.object-meta.xml
<CustomObject>
    <label>Clinician Offboarding Request</label>
    <pluralLabel>Clinician Offboarding Request</pluralLabel>
</CustomObject>