knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Business_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Entity_Name__c</fullName>
    <label>Business Entity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>