knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Case Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>