knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Last_Day_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Work__c</fullName>
    <label>Last Day of Work</label>
    <type>Date</type>
</CustomField>