knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Pay_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Through_Date__c</fullName>
    <label>Pay Through Date</label>
    <type>Date</type>
</CustomField>