knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Primary_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason__c</fullName>
    <label>Primary Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>