knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Privilege_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Privilege_Expiration_Date__c</fullName>
    <label>Privilege Expiration Date</label>
    <type>Date</type>
</CustomField>