knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <label>Reason Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>