knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Rehireable__c.field-meta.xml
<CustomField>
    <fullName>Rehireable__c</fullName>
    <label>Rehireable</label>
    <length>32</length>
    <type>Text</type>
</CustomField>