knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinician_Offboarding_Request__e/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <description>This is the field that is used to send the Tax Type for IC</description>
    <label>Tax Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>